Pantalla todos los viajes

--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
       <div class="viajes">
         <div id="contenedorViajesTitulo">
           <h2 class="titulo">Ultimos viajes</h2>
-          <a class="verTodos">VER TODOS</a>
+          <a class="verTodos" href="allTrips.html">VER TODOS</a>
         </div>
 
         <div id="contenedorViajes">
