--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Trips App</title>
+    <title>Viajes App</title>
     <link rel="stylesheet" type="text/css" href="css/general.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Borel&family=Nunito:wght@200;300;400;500;600;700;800;900;1000&display=swap"
@@ -89,9 +89,11 @@
           </div>
         </div>
       </div>
-      <button class="botonNuevoViaje">
-        <p class ="nuevoViaje">+ Nuevo viaje</p>
-      </button>
+      <a href="./newTrip.html">
+        <button class="botonNuevoViaje" >
+          <p class ="nuevoViaje">+ Nuevo viaje</p>
+        </button>
+      </a>
     </div>
   </body>
-</html>
+  </html>
