--- a/home.html
+++ b/home.html
@@ -38,9 +38,11 @@
             <p class="montoViaje">$2897<sup>33</sup></p>
           </div>
           <div class="accionesViaje">
-            <button class="botonEditar botonAccionViaje">
-              <i class="fa fa-solid fa-pencil fa-2x iconoEditarViaje"></i>
-            </button>
+            <a href="./editTrip.html">
+              <button class="botonEditar botonAccionViaje">
+                <i class="fa fa-solid fa-pencil fa-2x iconoEditarViaje"></i>
+              </button>
+            </a>
             <button class="botonVer botonAccionViaje">
               <i class="fa fa-solid fa-eye iconoVerViaje"></i>
             </button>
@@ -52,9 +54,11 @@
             <p class="montoViaje">$3130<sup>41</sup></p>
           </div>
           <div class="accionesViaje">
-            <button class="botonEditar botonAccionViaje">
-              <i class="fa fa-solid fa-pencil fa-2x iconoEditarViaje"></i>
-            </button>
+            <a href="./editTrip.html">
+              <button class="botonEditar botonAccionViaje">
+                <i class="fa fa-solid fa-pencil fa-2x iconoEditarViaje"></i>
+              </button>
+            </a>
             <button class="botonVer botonAccionViaje">
               <i class="fa fa-solid fa-eye iconoVerViaje"></i>
             </button>
@@ -66,9 +70,11 @@
             <p class="montoViaje">$4800<sup>32</sup></p>
           </div>
           <div class="accionesViaje">
-            <button class="botonEditar botonAccionViaje">
-              <i class="fa fa-solid fa-pencil fa-2x iconoEditarViaje"></i>
-            </button>
+            <a href="./editTrip.html">
+              <button class="botonEditar botonAccionViaje">
+                <i class="fa fa-solid fa-pencil fa-2x iconoEditarViaje"></i>
+              </button>
+            </a>
             <button class="botonVer botonAccionViaje">
               <i class="fa fa-solid fa-eye iconoVerViaje"></i>
             </button>
@@ -80,9 +86,11 @@
             <p class="montoViaje">$3500<sup>56</sup></p>
           </div>
           <div class="accionesViaje">
-            <button class="botonEditar botonAccionViaje">
-              <i class="fa fa-solid fa-pencil fa-2x iconoEditarViaje"></i>
-            </button>
+            <a href="./editTrip.html">
+              <button class="botonEditar botonAccionViaje">
+                <i class="fa fa-solid fa-pencil fa-2x iconoEditarViaje"></i>
+              </button>
+            </a>
             <button class="botonVer botonAccionViaje">
               <i class="fa fa-solid fa-eye iconoVerViaje"></i>
             </button>
