--- a/allTrips.html
+++ b/allTrips.html
@@ -59,6 +59,62 @@
                 </button>
               </div>
           </div>
+          <div id="contenedorViajes">
+            <div class="datosViaje">
+                <p class="fecha">13/09/2023</p>
+                <p class="montoViaje">$2897<sup>33</sup></p>
+              </div>
+              <div class="accionesViaje">
+                <button class="botonEditar botonAccionViaje">
+                  <i class="fa fa-solid fa-pencil fa-2x iconoEditarViaje"></i>
+                </button>
+                <button class="botonVer botonAccionViaje">
+                  <i class="fa fa-solid fa-eye iconoVerViaje"></i>
+                </button>
+              </div>
+          </div>
+          <div id="contenedorViajes">
+            <div class="datosViaje">
+                <p class="fecha">13/09/2023</p>
+                <p class="montoViaje">$2897<sup>33</sup></p>
+              </div>
+              <div class="accionesViaje">
+                <button class="botonEditar botonAccionViaje">
+                  <i class="fa fa-solid fa-pencil fa-2x iconoEditarViaje"></i>
+                </button>
+                <button class="botonVer botonAccionViaje">
+                  <i class="fa fa-solid fa-eye iconoVerViaje"></i>
+                </button>
+              </div>
+          </div>
+          <div id="contenedorViajes">
+            <div class="datosViaje">
+                <p class="fecha">13/09/2023</p>
+                <p class="montoViaje">$2897<sup>33</sup></p>
+              </div>
+              <div class="accionesViaje">
+                <button class="botonEditar botonAccionViaje">
+                  <i class="fa fa-solid fa-pencil fa-2x iconoEditarViaje"></i>
+                </button>
+                <button class="botonVer botonAccionViaje">
+                  <i class="fa fa-solid fa-eye iconoVerViaje"></i>
+                </button>
+              </div>
+          </div>
+          <div id="contenedorViajes">
+            <div class="datosViaje">
+                <p class="fecha">13/09/2023</p>
+                <p class="montoViaje">$2897<sup>33</sup></p>
+              </div>
+              <div class="accionesViaje">
+                <button class="botonEditar botonAccionViaje">
+                  <i class="fa fa-solid fa-pencil fa-2x iconoEditarViaje"></i>
+                </button>
+                <button class="botonVer botonAccionViaje">
+                  <i class="fa fa-solid fa-eye iconoVerViaje"></i>
+                </button>
+              </div>
+          </div>
 
         </div>
     </div>
