cambios en formato

--- a/newTrip.html
+++ b/newTrip.html
@@ -29,12 +29,17 @@
             <input type="text" class="box">
                 
             <div class="botonesForm">
-                <button class="botonCancelar" >
-                    <p class ="cancelar"> Cancelar</p>
-                </button>
-                <button class="botonGuardar" >
-                    <p class ="guardar">+ Guardar</p>
-                </button>
+                <a href="/home.html">
+                    <button class="botonCancelar" >
+                        <p class ="cancelar"> Cancelar</p>
+                    </button>
+                </a>
+                <a href="./home.html">
+                    <button class="botonGuardar" >
+                        <p class ="guardar">+ Guardar</p>
+                    </button>
+                </a>
+                
             </div>
         </div>
     </div>
