Cambios en formato de pantallas

--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
           <div class="accionesViaje">
             <a href="./editTrip.html">
               <button class="botonEditar botonAccionViaje">
-                <i class="fa fa-solid fa-pencil fa-2x iconoEditarViaje"></i>
+                <i class="fa fa-solid fa-pencil iconoEditarViaje"></i>
               </button>
             </a>
             <button class="botonVer botonAccionViaje">
@@ -56,7 +56,7 @@
           <div class="accionesViaje">
             <a href="./editTrip.html">
               <button class="botonEditar botonAccionViaje">
-                <i class="fa fa-solid fa-pencil fa-2x iconoEditarViaje"></i>
+                <i class="fa fa-solid fa-pencil iconoEditarViaje"></i>
               </button>
             </a>
             <button class="botonVer botonAccionViaje">
@@ -72,7 +72,7 @@
           <div class="accionesViaje">
             <a href="./editTrip.html">
               <button class="botonEditar botonAccionViaje">
-                <i class="fa fa-solid fa-pencil fa-2x iconoEditarViaje"></i>
+                <i class="fa fa-solid fa-pencil iconoEditarViaje"></i>
               </button>
             </a>
             <button class="botonVer botonAccionViaje">
@@ -88,7 +88,7 @@
           <div class="accionesViaje">
             <a href="./editTrip.html">
               <button class="botonEditar botonAccionViaje">
-                <i class="fa fa-solid fa-pencil fa-2x iconoEditarViaje"></i>
+                <i class="fa fa-solid fa-pencil iconoEditarViaje"></i>
               </button>
             </a>
             <button class="botonVer botonAccionViaje">
