--- a/home.html
+++ b/home.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Viajes App</title>
     <link rel="stylesheet" type="text/css" href="css/general.css" />
     <link
@@ -13,7 +15,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
   </head>
-  <body class="principal">
+  <body>
     <div id="contenedor">
       <h1 class="titulo">Mis Viajes</h1>
       <div class="montosResumen">
