--- a/login.html
+++ b/login.html
@@ -53,14 +53,14 @@
             <label for="">Usuario</label>
             <input
             type="text"
-            value="Ingrese su usuario"
+            placeholder="Ingrese su usuario"
             required
             class="boxUsuario"
             />
         </div>
         <div class="contraseña">
             <label for="">Contraseña</label>
-            <input type="text" value="Ingrese su contraseña" class="boxPasw" />
+            <input type="text" placeholder="Ingrese su contraseña" class="boxPasw">
         </div>
         <div class="recordar">¿Olvidó su contraseña?</div>
         <a href="./home.html">
